--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -10,15 +10,7 @@
     <header></header>
     <main>
         <h1>Hola</h1>
-        <!-- h1 es el titulo principal (header 1), va bajando el tammaño -->
-        <!-- br es break, salta al siguiente renglon -->
-    <p></p> 
-    <!-- parrafo, cuantos parrafos quiero poner -->
-    <img src="" alt="Imagen no encontrada">
-    <!-- etiquete propiedad = "valor" -->
-    <!-- img alt= "Imagen no encontrada" -->
-    <!-- img src="./"  -->
-    <!-- https://via.placeholder.com/500 -->
+    <link rel="stylesheet" href="style.css">
 
 
 </body>
