--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nombre de la Pagina</title>
 </head>
 <body>
-<h1>Hola</h1>
 <link rel="stylesheet" href="style.css">
+<header>
+    <div id="logo"><img src="https://via.placeholder.com/80 " alt="Imagen no encontrada"></div>
+    <div id="titulo">Titulo</div>
+    <div id="descripcion">descripcion</div>
+</header>
+<p class="pie">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, accusantium. Odio asperiores, aspernatur quia iure, itaque quibusdam dolore impedit sed veniam quisquam assumenda debitis soluta, perferendis mollitia provident rem fugiat.</p>
+<h1 class="titulonoti">Titulo Noticia</h1>
+<button type="button" id="img"><img src="https://via.placeholder.com/800x400" alt="Imagen no encontrada"></button>
+<button type="button" id="tw"><img src="https://via.placeholder.com/50" alt="Imagen no encontrada"></button>
+<h1 class="titu2">Noticia secundaria</h1>
+<p class="piesecun">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt sunt inventore alias, perspiciatis provident earum. Incidunt laudantium sapiente, voluptatum optio quae deserunt reiciendis porro, ut nisi debitis, quam perferendis dolores.</p>
+<button type="button" class="img2"><img src="https://via.placeholder.com/400x500" alt="Imagen no encontrada"></button>
+<h1 class="titu3">Noticia tres</h1>
+
+
+
+<button type="button" id="noticias">NOTICIAS</button>
+<button type="button" id="fixture">FIXTURE</button>
+<button type="button" id="equipos">EQUIPOS</button>
+<button type="button" id="tickets">TICKETS</button>
+<button type="button" id="tienda">TIENDA</button>
+<input type="text" placeholder= BUSCADOR id="buscador"></input>
 </body>
 </html>
