--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <button type="button" id="img"><img src="https://via.placeholder.com/800x400" alt="Imagen no encontrada"></button>
 <button type="button" id="tw"><img src="https://via.placeholder.com/50" alt="Imagen no encontrada"></button>
 <h1 class="titu2">Noticia secundaria</h1>
-<p class="piesecun">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt sunt inventore alias, perspiciatis provident earum. Incidunt laudantium sapiente, voluptatum optio quae deserunt reiciendis porro, ut nisi debitis, quam perferendis dolores.</p>
-<button type="button" class="img2"><img src="https://via.placeholder.com/400x500" alt="Imagen no encontrada"></button>
-<h1 class="titu3">Noticia tres</h1>
-
+<button type="button" class="img2"><img src="https://via.placeholder.com/600x250" alt="Imagen no encontrada"></button>
+<h2 class="titu3">Titulo tres</h2>
+<button type="button" class="img3"><img src="https://via.placeholder.com/600x250" alt="Imagen no encontrada"></button>
+<h1 class="titu4">Titulo 4</h1>
+<button type="button" class="img4"><img src="https://via.placeholder.com/600x400" alt="Imagen no encontrada"></button>
 
 
 <button type="button" id="noticias">NOTICIAS</button>
