--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <div id="titulo">Titulo</div>
     <div id="descripcion">descripcion</div>
 </header>
+
+<div class="topnav">
+    <button type="button" id="noticias">NOTICIAS</button>
+    <button type="button" id="fixture">FIXTURE</button>
+    <button type="button" id="equipos">EQUIPOS</button>
+    <button type="button" id="tickets">TICKETS</button>
+    <button type="button" id="tienda">TIENDA</button>
+    <input type="text" placeholder= BUSCADOR id="buscador"></input>
+</div>
+
 <p class="pie">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, accusantium. Odio asperiores, aspernatur quia iure, itaque quibusdam dolore impedit sed veniam quisquam assumenda debitis soluta, perferendis mollitia provident rem fugiat.</p>
 <h1 class="titulonoti">Titulo Noticia</h1>
 <button type="button" id="img"><img src="https://via.placeholder.com/800x400" alt="Imagen no encontrada"></button>
@@ -24,12 +34,5 @@
 <h1 class="titu4">Titulo 4</h1>
 <button type="button" class="img4"><img src="https://via.placeholder.com/600x400" alt="Imagen no encontrada"></button>
 
-
-<button type="button" id="noticias">NOTICIAS</button>
-<button type="button" id="fixture">FIXTURE</button>
-<button type="button" id="equipos">EQUIPOS</button>
-<button type="button" id="tickets">TICKETS</button>
-<button type="button" id="tienda">TIENDA</button>
-<input type="text" placeholder= BUSCADOR id="buscador"></input>
 </body>
 </html>
