--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nombre de la Pagina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,23 +17,20 @@
 
 <div class="topnav">
     <button type="button" id="noticias">NOTICIAS</button>
-    <button type="button" id="fixture">FIXTURE</button>
-    <button type="button" id="equipos">EQUIPOS</button>
-    <button type="button" id="tickets">TICKETS</button>
-    <button type="button" id="tienda">TIENDA</button>
-    <input type="text" placeholder= BUSCADOR id="buscador"></input>
+    <div><button type="button" id="noticias">NOTICIAS</button></div>
+    <div><button type="button" id="fixture">FIXTURE</button></div>
+    <div><button type="button" id="equipos">EQUIPOS</button></div>
+    <div><button type="button" id="tickets">TICKETS</button></div>
+    <div><button type="button" id="tienda">TIENDA</button></div>
+    <div><input type="text" placeholder= BUSCADOR id="buscador"></input></div>
 </div>
-
-<p class="pie">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, accusantium. Odio asperiores, aspernatur quia iure, itaque quibusdam dolore impedit sed veniam quisquam assumenda debitis soluta, perferendis mollitia provident rem fugiat.</p>
-<h1 class="titulonoti">Titulo Noticia</h1>
-<button type="button" id="img"><img src="https://via.placeholder.com/800x400" alt="Imagen no encontrada"></button>
-<button type="button" id="tw"><img src="https://via.placeholder.com/50" alt="Imagen no encontrada"></button>
-<h1 class="titu2">Noticia secundaria</h1>
-<button type="button" class="img2"><img src="https://via.placeholder.com/600x250" alt="Imagen no encontrada"></button>
-<h2 class="titu3">Titulo tres</h2>
-<button type="button" class="img3"><img src="https://via.placeholder.com/600x250" alt="Imagen no encontrada"></button>
-<h1 class="titu4">Titulo 4</h1>
-<button type="button" class="img4"><img src="https://via.placeholder.com/600x400" alt="Imagen no encontrada"></button>
-
+<h1 class="titu">TOCAR LA IMAGEN PARA LEER LA NOTICA</h1>
+<div class="noticias">
+    <div><button type="button" id="notiprin"> <img src="https://via.placeholder.com/1200x600" alt="Imagen no encontrada"></button> </div>
+    <div><button type="button" id="noti1"> <img src="https://via.placeholder.com/500x300" alt="Imagen no encontrada"></button> </div>
+   <div><button type="button" id="noti2"> <img src="https://via.placeholder.com/500x300" alt="Imagen no encontrada"></button></div>
+   <div><button type="button" id="noti3"> <img src="https://via.placeholder.com/500x300" alt="Imagen no encontrada"></button> </div>
+   <div><button type="button" id="noti4"> <img src="https://via.placeholder.com/500x300" alt="Imagen no encontrada"></button> </div>
+</div>
 </body>
 </html>
