--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombre de la Pagina</title>
+    <title>BOCAINFO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,11 +16,13 @@
               <a class="link-secondary" href="#"><img src="images\Boca escudo.png" width="100" height="100" alt="Imagen no encontrada"></a>
             </div>
             <div class="col-4 text-center" id="titulo">
-                <a class="blog-header-logo text-dark" href="#">TITULO</a>
+                <a class="blog-header-logo text-dark" href="#">CLUB ATLETICO BOCA JUNIORS</a>
             </div>
           </div>
         </header>
-      
+            </div>
+          </div>
+        </section>
         <div class="nav-scroller fixed-top py-1 mb-2" id="topnav">
           <nav class="nav d-flex" id="topnav2">
             <div class="col-0 d-flex  align-items-center">
@@ -28,7 +30,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
               </a>
               <a class="btn btn-sm btn-outline-secondary" href="#">Iniciar Sesion</a>
-            </div>
+            </div>             
             <a class="p-2 link-secondary" href="#">FIXTURE</a>
             <a class="p-2 link-secondary" href="#">TIENDA</a>
             <a class="p-2 link-secondary" href="#">TICKETS</a>
@@ -41,6 +43,7 @@
           </nav>
         </div>
       </div>
+    </div>
       
       <main class="container">
         <div class="p-4 p-md-5 mb-4 rounded text-bg-dark" id="cuadro">
