--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <header class="blog-header lh-1 py-3" id="head">
           <div class="row flex-nowrap align-items-center">
             <div class="col-4 pt-1">
-              <a class="link-secondary" href="#"><img src="images\Boca escudo.png" width="100" height="100" alt="Imagen no encontrada"></a>
+              <a class="link-secondary" href="https://www.bocajuniors.com.ar/"><img src="images\Boca escudo.png" width="150" height="150" alt="Imagen no encontrada"></a>
             </div>
             <div class="col-4 text-center" id="titulo">
-                <a id="titulo">CLUB ATLETICO BOCA JUNIORS</a>
+                <a id="titulo"><img src="./images/mitad.png" alt=""></a>
             </div>
           </div>
         </header>
@@ -27,9 +27,8 @@
           <nav class="nav d-flex" id="topnav2">
             <div class="col-0 d-flex  align-items-center">
               <a class="link-secondary" href="#" aria-label="Search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+                 <title></title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
               </a>
-              <a class="btn btn-sm btn-outline-secondary" href="#">Iniciar Sesion</a>
             </div>             
             <a class="p-2 link-secondary" href="#fixture">FIXTURE</a>
             <a class="p-2 link-secondary" href="./camiseta.html" > TIENDA</a>
