--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <main class="container">
         <div class="p-4 p-md-5 mb-4 rounded text-bg-dark" id="cuadro">
           <div class="col-md-6 px-0">
-            <h1 id="primera" class="display-4 fst-italic text-dark">NOTICIA MASCULINO</h1>
-            <img src="./images/primera.jpg" alt="Imagen no encontrada">
+            <h1 id="primera" class="display-4 fst-italic text-dark">NOTICIA MASCULINO</h1> 
+            <p id="letra">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, veniam? Sequi, repellat magnam? Sapiente veritatis necessitatibus reprehenderit illum illo ratione corrupti est. Numquam dolores non illo sequi nesciunt totam eum.</p>
             <p class="lead mb-0"><a href="https://www.bocajuniors.com.ar/el-club/patro-copaarg22" class="text-dark fw-bold">Leer noticia...</a></p>
           </div>
         </div>
@@ -130,7 +130,7 @@
                 </tfoot>
               </table>
           <div id="fixture">
-            <img src="./images/fixture1.jpg_large" alt="Imagen no encontrada">
+            <img src="./images/fixture1.jpg_large" width="600" height="600" alt="Imagen no encontrada">
           </div>
       
              
